<resources>
    <string name="app_name">SELF2F</string>
    <string name="tVTitulo">Captura Básica</string>
    <string name="btnCapBasica">Captura Básica</string>
    <string name="btnAutenticacion">Autenticación</string>
    <string name="btnCapEvaluacion">Captura Evaluación</string>
    <string name="btnCierreVenta">Cierre de venta</string>
    <string name="tVInstrucciones">Llene todos los campos con los datos que se indican</string>
    <string name="tVApPaterno">Apellido paterno:</string>
    <string name="hinttVApPaterno">Apellido paterno</string>
    <string name="Oblig">*</string>
    <string name="tVApMaterno">Apellido materno:</string>
    <string name="hinttVApMaterno">Apellido materno</string>
    <string name="tVpNombre">Primer nombre:</string>
    <string name="hinttVpNombre">Primer nombre</string>
    <string name="tVsNombre">Segundo nombre:</string>
    <string name="hinttVsNombre">Segundo nombre</string>
    <string name="tVestadoCivil">Estado civil:</string>
    <string name="hinttVestadoCivil">Seleccione una opción</string>
    <string name="tVsexo">Sexo:</string>
    <string name="hinttVsexo">Seleccione una opción</string>
    <string name="tVfechaNac">Fecha de nacimiento:</string>
    <string name="hinttVfechaNac">Fecha de nacimiento</string>
    <string name="tVNacionalidad">Nacionalidad:</string>
    <string name="hinttVNacionalidad">Nacionalidad</string>
    <string name="tVFormaMigratoria">Forma migratoria:</string>
    <string name="hinttVFormaMigratoria">Seleccione una opción</string>
    <string name="tVRFC">RFC:</string>
    <string name="hinttVRFC">RFC</string>
    <string name="tVCalle">Calle:</string>
    <string name="hinttVCalle">Calle</string>
    <string name="tVNumExterior">Número exterior:</string>
    <string name="hinttVNumExterior">Exterior</string>
    <string name="tVNumInterior">Número interior:</string>
    <string name="hinttVNumInterior">Interior</string>
    <string name="tVCodigoPostal">Código Postal:</string>
    <string name="hinttVCodigoPostal">CP</string>
    <string name="tVColonia">Colonia:</string>
    <string name="hinttVColonia">Seleccione una opción</string>
    <string name="tVDelegacion">Delegación o municipio:</string>
    <string name="hinttVDelegacion">Seleccione una opción</string>
    <string name="tVEstado">Estado:</string>
    <string name="hinttVEstado">Seleccione una opción</string>
    <string name="tVLadaDom">Lada Domicilio:</string>
    <string name="hinttVLadaDom">Clave Lada</string>
    <string name="tVTelDom">Teléfono Domicilio:</string>
    <string name="hinttVTelDom">Teléfono</string>
    <string name="tVTipoProducto">Tipo de producto:</string>
    <string name="hinttVTipoProducto">Producto</string>
    <string name="btnContinuar">Continuar</string>
    <string name="tVInstAutenticacion">Seleccione la respuesta más adecuada</string>
    <string name="tVPreg1">1.- ¿Es usted titular de alguna TDC vigente emitida por alguna institución bancaria?</string>
    <string name="tVPreg2">2.- ¿Es usted titular de algún crédito hipotecario vigente (bancario o de otra financiera) que aun esté pagando?</string>
    <string name="tVPreg3">3.- ¿Cuénta o ha contado con algún Crédito Automotriz en los últimos 2 años a la fecha, otorgado por un banco o alguna otra financiera aunque ya lo haya terminado de pagar?</string>
    <string name="tVPreg4">¿Está usted de acuerdo con que para fines promocionales relacionados con bienes y servicios se proporcionen sus datos personales a terceros distintos de las entidades integrantes de Grupo Financiero Santander?</string>
    <string name="switchOff">No</string>
    <string name="switchOn">Si</string>
    <string name="tVPreg1a">¿Con qué institución?</string>
    <string name="tVSpinner1Preg1a">Tarjeta bancaria</string>
    <string name="tVSpinner2Preg1a">Tarjeta departamental</string>
    <string name="tVTipoTarjeta">Tipo de tarjeta</string>
    <string name="hinttVeTtipoTarjetaBancaria">Seleccione una opción</string>
    <string name="hinttVeTtipoTarjetaDepartamental">Seleccione una opcion</string>
    <string name="tVUltimos4Digitos">Últimos cuatro dígitos</string>
    <string name="hinttVtVUltimos4Digitos"></string>
    <string name="rOpcionSIPreg1">Si</string>
    <string name="rOpcionNOPreg1">No</string>
    <string name="rOpcionSIPreg2">Si</string>
    <string name="rOpcionNOPreg2">No</string>
    <string name="rOpcionSIPreg3">Si</string>
    <string name="rOpcionNOPreg3">No</string>
    <string name="rOpcionSIPreg4">Si</string>
    <string name="rOpcionNOPreg4">No</string>
    <string name="tVInstCapEvaluacion">Llene todos los campos con los datos que se indican</string>
    <string name="tVTipoVivienda">Tipo de Vivienda:</string>
    <string name="hinttVeTTipoVivienda">Seleccione una opción</string>
    <string name="tVAñosAntiguedad">Años de Antigüedad Domicilio:</string>
    <string name="hinttVeTAñosAntiguedad">Antigüedad</string>
    <string name="tVDatosOcupacion">Datos Ocupación</string>
    <string name="tVIngresoNetoFijo">Ingreso neto fijo:</string>
    <string name="hinttVeTIngresoNetoFijo">Ingreso neto fijo</string>
    <string name="tVIngresoNetoVariable">Ingreso neto variable:</string>
    <string name="hinttVeTIngresoNetoVariable">Ingreso neto variable</string>
    <string name="tVVentasAnuales">Ventas anuales:</string>
    <string name="hinteTVentasAnuales">Ventas anuales</string>
    <string name="tVProfesionistasIndep">Profesionistas independientes:</string>
    <string name="hinteTProfesionistasIndep">Profesionistas independientes</string>
    <string name="tVOcupacion">Ocupación:</string>
    <string name="hinteTOcupacion">Seleccione una opción</string>
    <string name="tVUniversidad">Universidad:</string>
    <string name="hinteTUniversidad">Seleccione una opción</string>
    <string name="tVCampus">Campus:</string>
    <string name="hinteTCampus">Campus</string>
    <string name="tVCarrera">Carrera:</string>
    <string name="hinteTCarrera">Seleccione una opción</string>
    <string name="tVTipoFinanciamiento">Tipo financiamiento:</string>
    <string name="hinteTTipoFinanciamiento">Seleccione una opción</string>
    <string name="tVGradoEscolar">Grado escolar:</string>
    <string name="hinteTGradoEscolar">Seleccione una opción</string>
    <string name="tVLadaEmpleo">Lada Empleo:</string>
    <string name="hinteTLadaEmpleo">Clave Lada</string>
    <string name="tVTelEmpleo">Teléfono Empleo:</string>
    <string name="hinteTTelEmpleo">Teléfono</string>
    <string name="tVExtension">Extensión:</string>
    <string name="hinteTExtension">Extensión</string>
    <string name="tVAñosAntiguedadEmpleo">Años de antigüedad Empleo:</string>
    <string name="hinteTAñosAntiguedadEmpleo">Antigüedad</string>
    <string name="tVCorreoElectronico">Correo electrónico:</string>
    <string name="hinteTCorreoElectronico">Correo electrónico</string>
    <string name="tVTelCelular">Teléfono Celular:</string>
    <string name="hinteTTelCelular">Teléfono celular</string>
    <string name="tVSucursalPaperless">Sucursal Paperless:</string>
    <string name="hinteTSucursalPaperless">Sucursal Paperless</string>
    <string name="tVAsignarSucursal">Asignar sucursal de mayor conveniencia</string>
    <string name="rUsarDomicilio">Usar éste domicilio</string>
    <string name="rBuscarSucursal">Buscar una sucursal</string>
    <string name="rSucursal">SUCURSAL 1</string>
    <string name="tVTextDireccionSucursal">Dirección:</string>
    <string name="tVDireccionSucursal">Calle #, Colonia, C.P.</string>
    <string name="tVTextDelegacion">Delegación:</string>
    <string name="tVDelegacionSuc">Delegacion SUCURSAL 1</string>
    <string name="btnContinuarAutenticacion">Continuar</string>
    <string name="btnCancelarAutenticacion">Cancelar</string>
    <string name="tVIrInicioCuestionario">Ir al inicio del cuestionario</string>
    <string name="tVInstCierreVenta">Llene todos los campos con los datos que se indican</string>
    <string name="tVDatosdeOcupacion">Datos de Ocupación</string>
    <string name="tVTipodeOcupacion">Tipo de Ocupación:</string>
    <string name="tVTipodeOcupacionNegocioP">NEGOCIO PROPIO</string>
    <string name="tVNombreEmpresa">Nombre de la Empresa:</string>
    <string name="hinteTNombreEmpresa">Nombre de la Empresa</string>
    <string name="tVCalleEmpresa">Calle de la Empresa:</string>
    <string name="hinteTCalleEmpresa">Calle de la Empresa</string>
    <string name="tVNumExtEmpresa">Número exterior:</string>
    <string name="hinteTNumExtEmpresa">Número Exterior</string>
    <string name="tVNumIntEmpresa">Número interior:</string>
    <string name="hinteTNumIntEmpresa">Número Interior</string>
    <string name="tVCodigoPostalEmpresa">Código postal:</string>
    <string name="hinteTCodigoPostalEmpresa">CP</string>
    <string name="tVColoniaEmpresa">Colonia:</string>
    <string name="hinteTColoniaEmpresa">Seleccione una opción</string>
    <string name="tVMunicipioEmpresa">Delegación o municipio:</string>
    <string name="hinteTMunicipioEmpresa">Seleccione una opción</string>
    <string name="tVEstadoEmpresa">Estado:</string>
    <string name="hinteTEstadoEmpresa">Seleccione una opción</string>
    <string name="tVReferencias1">Referencias 1</string>
    <string name="tVApPaternoRef1">Apellido paterno:</string>
    <string name="hinteTApPaternoRef1">Paterno</string>
    <string name="tVApMaternoRef1">Apellido materno:</string>
    <string name="hinteTApMaternoRef1">Materno</string>
    <string name="tVPrimerNombreRef1">Primer nombre:</string>
    <string name="hinteTPrimerNombreRef1">Primer Nombre</string>
    <string name="tVSegundoNombreRef1">Segundo nombre:</string>
    <string name="hinteTSegundoNombreRef1">Segundo Nombre</string>
    <string name="tVLadaDomRef1">Lada domicilio:</string>
    <string name="hinteTLadaDomRef1">Clave Lada</string>
    <string name="tVTelDomRef1">Teléfono domicilio:</string>
    <string name="hinteTTelDomRef1">Télefono</string>
    <string name="tVLadaEmpleoRef1">Lada empleo:</string>
    <string name="hinteTLadaEmpleoRef1">Clave Lada</string>
    <string name="tVTelEmpleoRef1">Teléfono empleo:</string>
    <string name="hinteTTelEmpleoRef1">Télefono</string>
    <string name="tVExtensionRef1">Extensión:</string>
    <string name="hinteTExtensionRef1">Extensión</string>
    <string name="tVCelularRef1">Celular:</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="textHintUser">Usuario</string>
    <string name="textHintPwd">Contraseña</string>
    <string name="tVContraseniaAnterior">Contraseña anterior: </string>
    <string name="tVContraseniaNueva">Contraseña nueva: </string>
    <string name="tVConfirmarContrasenia">Confirmar contraseña: </string>
    <string name="btnCambiarPwd">Cambiar</string>
    <string name="tVNombreCompleto">Nombre completo: </string>
    <string name="tVTitleSolConcluida">Solicitud concluida</string>
    <string name="tVDictamen">Dictamen</string>
    <string name="tVEtiquetaFolioAgencia">Folio de agencia: </string>
    <string name="tVEtiquetaFolioInteligente">Folio inteligente: </string>
    <string name="tVEtiquetaEstatus">Estatus: </string>
    <string name="tVEtiquetaDictamen">Dictamen: </string>
    <string name="tVEtiquetaSituacion">Situación: </string>
    <string name="tVEtiquetaFecha">Fecha: </string>
    <string name="tVContFolioAgencia">Aqui va el folio agencia</string>
    <string name="tVContFolioInteligente">Aqui va el folio inteligente</string>
    <string name="tVContNombreCompleto">Aqui va el nombre</string>
    <string name="tVContEstatus">Aqui va el estatus</string>
    <string name="tVContDictamen">Aqui va el dictamen</string>
    <string name="tVContSituacion">Aqui va la situacion</string>
    <string name="tVContFechaDictamen">Aqui va la fecha</string>
    <string name="bttnContinuarDictamen">Continuar</string>
</resources>